--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -1,15 +1,3 @@
-.card {
-  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-}
-
-.title {
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
-  font-weight: 700;
-  font-size: 2rem;
-}
-
 .item {
   display: flex;
   flex-direction: column;
@@ -26,8 +14,8 @@
     box-shadow 150ms ease,
     transform 100ms ease;
 
-  @mixin hover {
+  /* @mixin hover {
     box-shadow: var(--mantine-shadow-md);
     transform: scale(1.05);
-  }
+  } */
 }
