--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -22,9 +22,9 @@
     font-size: var(--mantine-font-size-sm);
     font-weight: 500;
   
-    @mixin hover {
+    /* @mixin hover {
         background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-    }
+    } */
 }
   
 .linkLabel {
