change schema, add hovering eff

--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -13,9 +13,9 @@
   transition:
     box-shadow 150ms ease,
     transform 100ms ease;
+}
 
-  /* @mixin hover {
-    box-shadow: var(--mantine-shadow-md);
-    transform: scale(1.05);
-  } */
+.item:hover {
+  box-shadow: var(--mantine-shadow-md);
+  transform: scale(1.05);
 }
